--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       </div>
       <div class="card col-12 col-md-5 col-lg-12 mt-3">
         <img class="card-img" src="imagenes/Proyectos.png" alt="Card Proyectos" id="Proyectos">
-        <div class="card-img-overlay">
-          <a href=""><p class="card-text">Proyectos</p></a>
+        <a href="proyectos.html"><div class="card-img-overlay"></a>
+          <a href="proyectos.html"><p class="card-text">Proyectos</p></a>
         </div>
       </div>
     </div>
