--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
       <div class="card col-12 offset-md-1 col-md-5 offset-lg-0 col-lg-12 mt-2 mr-2" >
         <img class="card-img" src="imagenes/CV.png"  alt="Card CV" id="CV">
         <a href="CV.html">  <div class="card-img-overlay" ></a>
-          <a href="CV.html">  <p class="card-text">Curriculum</p></a>
+          <a href="CV.html"target="_blank">  <p class="card-text">Curriculum</p></a>
         </div>
       </div>
       <div class="card col-12 col-md-5 col-lg-12 mt-3">
         <img class="card-img" src="imagenes/Proyectos.png" alt="Card Proyectos" id="Proyectos">
         <a href="proyectos.html"><div class="card-img-overlay"></a>
-          <a href="proyectos.html"><p class="card-text">Proyectos</p></a>
+          <a href="proyectos.html"target="_blank"><p class="card-text">Proyectos</p></a>
         </div>
       </div>
     </div>
