--- a/proyectos.html
+++ b/proyectos.html
@@ -17,7 +17,7 @@
         </div>
         <div class="grid-item col-12 col-md-6 col-lg-12">
           <figure>
-            <img src="imagenes/WebCatering.png" alt="WebCaternig">
+            <a href="proyectos.html"target="_blank"><img src="imagenes/WebCatering.png" alt="WebCaternig"></a>
           </figure>
         </div>
         <div class="grid-item col-12 col-md-6 col-lg-12">
